objects/AdditionalAccountFields__c.object
<CustomObject>
    <fields>
        <fullName>Exchange__c</fullName>
        <description>SFDC-3929: IPREO field</description>
        <inlineHelpText>Indicates the exchange that this account and security primarily trade on.</inlineHelpText>
        <label>Exchange</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abu Dhabi Securities Exchange</fullName>
                </value>
                <value>
                    <fullName>Amman Financial Market</fullName>
                </value>
                <value>
                    <fullName>Athens Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>Australian Securities Exchange</fullName>
                </value>
                <value>
                    <fullName>B3 S.A. - Brasil, Bolsa, Balcao</fullName>
                </value>
                <value>
                    <fullName>Bahrain Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>BATS BZX Exchange</fullName>
                </value>
                <value>
                    <fullName>Beirut Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>Belgrade Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>Bermuda Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>BM&amp;F Bovespa</fullName>
                </value>
                <value>
                    <fullName>BME - Bolsas y Mercados Españoles</fullName>
                </value>
                <value>
                    <fullName>Bolsa de Comercio de Buenos Aires</fullName>
                </value>
                <value>
                    <fullName>Bolsa de Comercio de Santiago</fullName>
                </value>
                <value>
                    <fullName>Bolsa de Valores de Colombia</fullName>
                </value>
                <value>
                    <fullName>Bolsa de Valores de Lima</fullName>
                </value>
                <value>
                    <fullName>Bombay Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>Borsa Istanbul</fullName>
                </value>
                <value>
                    <fullName>Borsa Italiana S.P.A.</fullName>
                </value>
                <value>
                    <fullName>Botswana Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>Budapest Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>Bulgarian Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>Bursa Malaysia</fullName>
                </value>
                <value>
                    <fullName>Cairo</fullName>
                </value>
                <value>
                    <fullName>Casablanca Stock Exchange</fullName>
                </value>
                <value>
                    <fullName>Dubai Financial Market</fullName>
                </value>
                <value>
                    <fullName>Euronext Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Euronext Brussels</fullName>
                </value>
                <value>
                    <fullName>Euronext Dublin</fullName>
                </value>
                <value>
                    <fullName>Euronext Lisbon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FrontOfficeSystem__c</fullName>
        <description>SFDC1-785 Addition Account Fields - General Info</description>
        <label>Front Office System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advent</fullName>
                </value>
                <value>
                    <fullName>Allocare</fullName>
                </value>
                <value>
                    <fullName>Black Mountain Everest</fullName>
                </value>
                <value>
                    <fullName>Blackrock Aladdin</fullName>
                </value>
                <value>
                    <fullName>Bloomberg AIM</fullName>
                </value>
                <value>
                    <fullName>Calypso</fullName>
                </value>
                <value>
                    <fullName>Charles River</fullName>
                </value>
                <value>
                    <fullName>Endur</fullName>
                </value>
                <value>
                    <fullName>Enfusion Integrata</fullName>
                </value>
                <value>
                    <fullName>Equalizer</fullName>
                </value>
                <value>
                    <fullName>EzeCastle</fullName>
                </value>
                <value>
                    <fullName>Factset</fullName>
                </value>
                <value>
                    <fullName>Finacle Treasury</fullName>
                </value>
                <value>
                    <fullName>Flextrade</fullName>
                </value>
                <value>
                    <fullName>Geneva Moxy</fullName>
                </value>
                <value>
                    <fullName>Indus Valley Partners (I.V.P.)</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Internal Build</fullName>
                </value>
                <value>
                    <fullName>IRESS Portfolio/Order System</fullName>
                </value>
                <value>
                    <fullName>Latent Zero</fullName>
                </value>
                <value>
                    <fullName>Linedata</fullName>
                </value>
                <value>
                    <fullName>Liquidity Book</fullName>
                </value>
                <value>
                    <fullName>LongView Trading</fullName>
                </value>
                <value>
                    <fullName>M.I.K</fullName>
                </value>
                <value>
                    <fullName>MacGregor XIP</fullName>
                </value>
                <value>
                    <fullName>Murex</fullName>
                </value>
                <value>
                    <fullName>NeoXam NxManager</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Odyssey - TripleA</fullName>
                </value>
                <value>
                    <fullName>OpenLink Findur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundAdmin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC - 2751 - Additional Account Fields needed for PCM</description>
        <inlineHelpText>This field stores the list of Fund Admin relationship for financial services</inlineHelpText>
        <label>Fund Admin</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Additional Account Fields (Fund Admin)</relationshipLabel>
        <relationshipName>AdditionalAccountFieldsFundAdmin</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GoldfireExpirationDate__c</fullName>
        <description>SFDC-213 Updated page layout location.
Original SFDC1-4484 Created for Service Communicty to mass-activate and deactive users.</description>
        <inlineHelpText>Maintained by Goldfire Customer Care</inlineHelpText>
        <label>Goldfire Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDMSID__c</fullName>
        <description>SFDC-1753 IDMS Number that is on Account needs to be migrated to Salesforce from CRM
SFDC-4041 Rename field label from IDMS ID to ZPDID</description>
        <label>ZPDID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntradayDeliveryDate__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Date MSF started receiving the Intraday trades data from the customer</inlineHelpText>
        <label>Intraday Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IntradayStatus__c</fullName>
        <description>SFDC1-2071 This field is populated manually</description>
        <inlineHelpText>Status of MSF Data Onboarding Process of the Intraday trades from this customer (if applicable)</inlineHelpText>
        <label>Intraday Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreed in Principle</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Delivered via Pirum</fullName>
                </value>
                <value>
                    <fullName>Interested in contributing via Pirum</fullName>
                </value>
                <value>
                    <fullName>Not Contacted</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Onboarded</fullName>
                </value>
                <value>
                    <fullName>Partially Onboarded</fullName>
                </value>
                <value>
                    <fullName>Work in Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvestorPortal__c</fullName>
        <description>SFDC-2751 - Additional Account Fields needed for PCM</description>
        <inlineHelpText>This field stores the list of Prism product competitors</inlineHelpText>
        <label>Investor Portal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AltaReturn</fullName>
                </value>
                <value>
                    <fullName>Ansarada</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Dynamo</fullName>
                </value>
                <value>
                    <fullName>eFront</fullName>
                </value>
                <value>
                    <fullName>FIS</fullName>
                </value>
                <value>
                    <fullName>Homegrown</fullName>
                </value>
                <value>
                    <fullName>Intralinks</fullName>
                </value>
                <value>
                    <fullName>Investran DX</fullName>
                </value>
                <value>
                    <fullName>Juniper Square</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>PEARonline</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>VDR</fullName>
                </value>
                <value>
                    <fullName>Yardi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jurisdictions__c</fullName>
        <description>SFDC-4333 - Adding new Fields for AAF for GRRS</description>
        <label>Jurisdictions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASIC</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>CFTC</fullName>
                </value>
                <value>
                    <fullName>EMIR EU</fullName>
                </value>
                <value>
                    <fullName>EMIR UK</fullName>
                </value>
                <value>
                    <fullName>HKMA</fullName>
                </value>
                <value>
                    <fullName>MAS</fullName>
                </value>
                <value>
                    <fullName>MiFID II</fullName>
                </value>
                <value>
                    <fullName>SEC</fullName>
                </value>
                <value>
                    <fullName>SFTR EU</fullName>
                </value>
                <value>
                    <fullName>SFTR UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KY3P__c</fullName>
        <description>SFDC1-785 Addition Account Fields - General Info</description>
        <inlineHelpText>Type of KY3P Account or relationship to IHS Markit from a KY3P perspective</inlineHelpText>
        <label>KY3P</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Vendor &amp; Consumer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KingdomExpirationDate__c</fullName>
        <description>SFDC-213 Update page layout location.
Original SFDC1-4484 Created for Service Communicty to mass-activate and deactive users.</description>
        <inlineHelpText>Maintained by Kingdom Customer Care</inlineHelpText>
        <label>Kingdom Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>Added as part of migration exercise by Paras</description>
        <externalId>true</externalId>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>Added as part of migration exercise by Paras</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>Added as part of migration exercise by Paras</description>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LiveCMBrokers__c</fullName>
        <description>SFDC1-1066 Live CM Brokers is calculated by the number of related &quot;CM Relationships&quot; records where Account Status is &quot;Live&quot;</description>
        <inlineHelpText>Live CM Brokers is calculated by the number of related &quot;CM Relationships&quot; records where Account Status is &quot;Live&quot;</inlineHelpText>
        <label>Live CM Brokers</label>
        <summaryFilterItems>
            <field>CMRelationship__c.AccountStatus__c</field>
            <operation>equals</operation>
            <value>Live</value>
        </summaryFilterItems>
        <summaryForeignKey>CMRelationship__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MRMAccountComments__c</fullName>
        <description>SFDC1-1066 Additional Account Fields - MRM Account Comments</description>
        <inlineHelpText>Comments/Notes field in respect of MRM for this account</inlineHelpText>
        <label>MRM Account Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MRMProductsUsed__c</fullName>
        <description>SFDC1-1066 Additional Account Fields - MRM Products Used</description>
        <inlineHelpText>Products from the MRM Suite that this customer subscribes to</inlineHelpText>
        <label>MRM Products Used</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Commission Manager</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Hub</fullName>
                </value>
                <value>
                    <fullName>Research Payment</fullName>
                </value>
                <value>
                    <fullName>Research Questionnaire</fullName>
                </value>
                <value>
                    <fullName>Vote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MRMRelationshipManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-1066 Additional Account Fields - MRM Relationship Manager
Recreated it as a lookup to user</description>
        <inlineHelpText>Lookup to a User that indicates the MRM Relationship Manager for the Account.</inlineHelpText>
        <label>MRM Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MRMAdditionalAccountFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSFASubSegment__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <label>MSFA Sub Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Agent Lender</fullName>
                </value>
                <value>
                    <fullName>Asset Manager</fullName>
                </value>
                <value>
                    <fullName>Beneficial Owner</fullName>
                </value>
                <value>
                    <fullName>Borrower / Prime Broker</fullName>
                </value>
                <value>
                    <fullName>Hedge Fund - Quant</fullName>
                </value>
                <value>
                    <fullName>Hedge Fund</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Borrower</fullName>
                    <isActive>false</isActive>
                    <label>Borrower</label>
                </value>
                <value>
                    <fullName>Buy Side</fullName>
                    <isActive>false</isActive>
                    <label>Buy Side</label>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                    <isActive>false</isActive>
                    <label>Corporate</label>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                    <isActive>false</isActive>
                    <label>Partnership</label>
                </value>
                <value>
                    <fullName>Regulator/supranational/industry body</fullName>
                    <isActive>false</isActive>
                    <label>Regulator/supranational/industry body</label>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                    <isActive>false</isActive>
                    <label>Vendor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSFContractedAccessRestrictions__c</fullName>
        <description>SFDC1-9809: Contract Access Restrictions - MSF data</description>
        <inlineHelpText>MSF Contracted Access Restrictions</inlineHelpText>
        <label>MSF Contracted Access Restrictions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MSFContractedYear__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <label>MSF Contracted Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSFType__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Flag to identify if they are an MSF Customer, prospect, Academic etc. (Not all accounts in salesforce will be an MSF Customer so this is used for reporting on customers of MSF)</inlineHelpText>
        <label>MSF Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Academic Customer</fullName>
                </value>
                <value>
                    <fullName>Corporate/IR</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Lost Customer</fullName>
                </value>
                <value>
                    <fullName>Lost Prospect</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Wrong Customer Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modules__c</fullName>
        <description>SFDC-4333 - Adding new Fields for AAF for GRRS</description>
        <label>Modules</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASIC Valuations</fullName>
                </value>
                <value>
                    <fullName>Best EX</fullName>
                </value>
                <value>
                    <fullName>EMIR Delegated Reporting</fullName>
                </value>
                <value>
                    <fullName>EMIR Valuations</fullName>
                </value>
                <value>
                    <fullName>MAS Valuations</fullName>
                </value>
                <value>
                    <fullName>MiFID FIRDS (ISIN) Eligibility</fullName>
                </value>
                <value>
                    <fullName>Reconciliation Frequency Monthly</fullName>
                </value>
                <value>
                    <fullName>Reconciliation Frequency Quarterly</fullName>
                </value>
                <value>
                    <fullName>RTS 27</fullName>
                </value>
                <value>
                    <fullName>SFTR Client Access Delegated Reporting</fullName>
                </value>
                <value>
                    <fullName>SFTR Data reporting and TR connectivity</fullName>
                </value>
                <value>
                    <fullName>SFTR Data Warehouse and Recon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewYorkStockExchangeTier__c</fullName>
        <description>SFDC-3052 Out of the IPREO (Core) migration it came forward they  require to log the NYSE program tier on the accounts</description>
        <inlineHelpText>Indicates the New York Stock Exchange Tier related to the Account</inlineHelpText>
        <label>New York Stock Exchange Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier A</fullName>
                </value>
                <value>
                    <fullName>Tier B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoDataReason__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Reason as to why the customer is not providing us with data per the MSF rules of &quot;give-to-get data&quot;</inlineHelpText>
        <label>No Data Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Administrative parent company account</fullName>
                </value>
                <value>
                    <fullName>Affiliate account providing data</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Consultancy only</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Inactive Trading</fullName>
                </value>
                <value>
                    <fullName>Investor Relations</fullName>
                </value>
                <value>
                    <fullName>Long only</fullName>
                </value>
                <value>
                    <fullName>MSF Contract Cancelled</fullName>
                </value>
                <value>
                    <fullName>No Securities Lending Program</fullName>
                </value>
                <value>
                    <fullName>No SF data provided (Div/ETP/IM only)</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Regulator</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>RX only</fullName>
                </value>
                <value>
                    <fullName>SAR/SAF Access Removed</fullName>
                </value>
                <value>
                    <fullName>Special contractual terms</fullName>
                </value>
                <value>
                    <fullName>UK IX only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OnboardingContact__c</fullName>
        <description>SFDC1-2071 Meg Francis: MSF is a contributed dataset we need to have the ability to track which accounts are contributing which data to us and when that started.</description>
        <inlineHelpText>Who at IHS Markit is liaising with the customer to onboard this customer&apos;s data</inlineHelpText>
        <label>Onboarding Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adam Oakley</fullName>
                </value>
                <value>
                    <fullName>David Murphy</fullName>
                </value>
                <value>
                    <fullName>Dharmendra Kumar</fullName>
                </value>
                <value>
                    <fullName>Gargi Nagar</fullName>
                </value>
                <value>
                    <fullName>Jason Yang</fullName>
                </value>
                <value>
                    <fullName>Jordan Maskowitz</fullName>
                </value>
                <value>
                    <fullName>Pushap Karan</fullName>
                </value>
                <value>
                    <fullName>Sahil Nangia</fullName>
                </value>
                <value>
                    <fullName>Swati Singh</fullName>
                </value>
                <value>
                    <fullName>Tom Ingram</fullName>
                </value>
                <value>
                    <fullName>Vani Priya</fullName>
                </value>
                <value>
                    <fullName>Vineet Nanda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OnboardingStage__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Stage of MSF Data Onboarding process if data is being given or if in progress (dependent on value in &quot;Data Provision&quot;)</inlineHelpText>
        <label>Onboarding Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DataProvision__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Actively being worked on</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>First stage escalation</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Second stage escalation</fullName>
                </value>
                <value>
                    <fullName>Third stage escalation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>